Documentation for long-gone variable _strip_has removed; replaced by documentation for _suppress_ipto, which is still in use. Changed the presentation of shortnames in the Velocity templates, modifying WrappedNode.shortForm() to disentangle leading namespace prefixes from shortnames so that they appear more-or-less as prefixed localnames.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -221,7 +221,7 @@
 				#set ($foreach.linkprop = 
 					" <a title='Click to add this property chain to viewed properties.' href='" + $foreach.changeResult.URI + "'>" + $image + "</a>"
 					+ " <a style='margin-left: 1ex' href='" + $property.URI + "'>" 
-					+ $property.shortForm().cut() 
+					+ $property.shortForm() 
 					+ "</a>"
 					)
 	            
@@ -238,7 +238,7 @@
 				#set ($foreach.linkprop = 
 					" <a title='Click to remove this property chain from viewed properties.' href='" + $foreach.changeResult.URI + "'>" + $image + "</a>"
 					+ " <a style='margin-left: 1ex' href='" + $property.URI + "'>" 
-					+ $property.shortForm().cut() 
+					+ $property.shortForm() 
 					+ "</a>"
 					)
 					
