Velocity renderer remembers the suffix it has been given, and passes that to the template so that the template can create /about URIs.

--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -171,7 +171,7 @@
 #set ($macro.A = $utils.newSet())
 #set ($ignored = $macro.A.addAll($_properties))
 #set ($ignored = $macro.A.add("*.*.*"))
-#set ($macro.uri = $rootPath + "/about.vhtml")
+#set ($macro.uri = $rootPath + "/about.$type_suffix")
 #set ($macro.base = $thisPage.wrap($macro.uri))
 #set ($macro.changeProperties = $macro.base.change('', '_properties', $utils.join($macro.A,',') ))
 #set ($macro.changeAll = $macro.changeProperties.change('','resource', $value.URI.quotedURI()))           
