--- a/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
+++ b/elda-standalone/src/main/webapp/lda-assets/vm/page-shell.vm
@@ -29,8 +29,8 @@
 #set ($_view = $vars['_view'].shortForm().raw())
 
 #set ($_count = $thisPage.valueOf("os:totalResults"))
-#set ($_pageSize = $vars['_pageSize'].shortForm().raw())
-#if ($_pageSize) #else #set ($_pageSize = 10) #end
+#set ($_pageSize = $vars['_pageSize'])
+#if ($_pageSize) #set ($_pageSize = $utils.toInt($_pageSize)) #else #set ($_pageSize = 10) #end
 
 #set ($_icon_reduced_size = "$resourceRoot/images/green/16x16/Reduced Size.png")
 #set ($_icon_full_size = "$resourceRoot/images/green/16x16/Full Size.png")
