--- a/elda-assets/src/main/webapp/css/result.css
+++ b/elda-assets/src/main/webapp/css/result.css
@@ -20,7 +20,7 @@ body {
 }
 
 nav.site {
-	background: url(../images/hmg-banner.png) no-repeat 0% 0%;
+	background: url(../images/standalone-banner.png) no-repeat 0% 0%;
 	padding-top: 54px;
 }
 
