--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -51,7 +51,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!!!!!!!</h1>
+        <h1>Hello, world! Will I see this has changed again foo bar bam?</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
         <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
