Added skeleton of page navigation bar

--- a/elda-assets/src/main/webapp/velocity/css/main.css
+++ b/elda-assets/src/main/webapp/velocity/css/main.css
@@ -1,22 +1,13 @@
+body {
+}
 
+.navbar h1 {
+  margin-top: 0;
+}
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+h1 .navbar-brand {
+  font-size: 100%;
+  font-weight: bold;
+  white-space: nowrap;
+  padding-left: 20px;
+}
