--- a/elda-assets/src/main/webapp/velocity/macros/navigation.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/navigation.vm
@@ -16,11 +16,22 @@
     #set( $disable = "" )
   #end
   #set( $items = "items")
-  #if( $size == "1")
+  #if( $size.equals( "1" ))
     #set( $items = "item" )
   #end
   #set( $newPageURL = $page.pageURL().withParameter( "SET", "_pageSize", $size ))
   <li class="$disable">
     <a href="$newPageURL">show $size $items</a>
+  </li>
+#end
+
+## Add a view link
+#macro( viewLink $ivew )
+  #set( $disable = "" )
+  #if( $view.viewName().equals( $_view.spelling() ) )
+    #set( $disable = "disabled" )
+  #end
+  <li class="$disable">
+    <a href="$view.getURI()">$view.viewName()</a>
   </li>
 #end
