--- a/elda-assets/src/main/webapp/velocity/partials/navigation-bar.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/navigation-bar.vm
@@ -16,14 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">jump to ... <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">resource 1</a></li>
-            <li><a href="#">resource 2</a></li>
-            <li><a href="#">resource 3</a></li>
-          </ul>
-        </li>
+        #parse( "partials/resource-links.vm" )
         #parse( "partials/page-size-links.vm" )
         #parse( "partials/format-links.vm" )
         #parse( "partials/view-links.vm" )
