Skeleton of results display

--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -23,6 +23,7 @@
   </head>
   <body>
     #parse( "partials/navigation-bar.vm" )
+    #parse( "partials/item-setup.vm")
 
     <div class="container">
 
