--- a/elda-assets/src/main/webapp/velocity/partials/list-endpoint.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/list-endpoint.vm
@@ -1,4 +1,4 @@
 ## Display the items in a list endpoint
-#foreach( $item in $page.items() )
+#foreach( $item in $hierarchy.roots() )
   #eldaItem( $item )
 #end
