--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -31,7 +31,7 @@ h1.resource-label {
   padding: 5px;
 }
 
-h2.resource-uri, .resource-types {
+h2.resource-uri, h4.resource-uri, .resource-types {
   font-size: 10pt;
   color: #999;
   margin: 0;
@@ -56,24 +56,6 @@ h2.resource-uri a, h2.resource-uri a:visited {
   padding-bottom: 0;
 }
 
-.nested {
-  display: inline-block;
-  border: 1px solid #eee;
-  border-radius: 3px;
-}
-
-.nested h3 {
-  font-size: 10pt;
-  margin: 0;
-  color: #101010;
-  background-color: #ccc;
-  padding: 3px;
-}
-
-.nested h3 a, .nested h3 a:visited {
-  color: #101010;
-}
-
 .rdf.object > ul {
   list-style: none;
   margin: 0;
@@ -95,7 +77,7 @@ ul ul {
 
 ul {
   list-style: none;
-  padding: 5px;
+  padding: 5px 5px 1px 5px;
 }
 
 div.rdf {
@@ -166,6 +148,10 @@ li {
   padding-bottom: 6px;
 }
 
+ul.resource-properties {
+  margin-bottom: 0;
+}
+
 ul.resource-properties li {
   border-left: 2px solid rgba( 160, 160, 160, 20 );
   padding-left: 8px;
@@ -177,6 +163,27 @@ ul.resource-properties li.last, ul.multiple li.first {
   padding-left: 11px;
 }
 
+/* nested resources */
+.nested {
+  display: inline-block;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+}
+
+.nested h3 {
+  font-size: 10pt;
+  margin: 0;
+  color: white;
+  background-color: #303030;
+  padding: 3px;
+  border-radius: 3px;
+}
+
+.nested h4 a, .nested h4 a:visited {
+  color: #101010;
+}
+
 .rdf.resource.nested .rdf.object {
   margin-left: -5px;
 }
+
